--- a/package.json
+++ b/package.json
@@ -10,13 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.5",
     "gsap": "^3.13.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.6.0",
     "react-tsparticles": "^2.12.2",
-    "tailwindcss": "^4.1.5",
     "tsparticles": "^3.8.1",
     "tsparticles-engine": "^2.12.0"
   },
@@ -26,10 +24,13 @@
     "@types/react-dom": "^19.0.4",
     "@types/tailwindcss": "^3.0.11",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.1",
     "vite": "^6.2.0"
   }
 }
