--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.6.0",
     "react-tsparticles": "^2.12.2",
+    "three": "^0.176.0",
     "tsparticles": "^3.8.1",
     "tsparticles-engine": "^2.12.0"
   },
